Working native-image building.